LU-5717 ptlrpc: fix deadlock problem of nrs_tbf_timer_cb

When callback of TBF timer is triggered, nrs_lock could be
holded by the current CPU which will cause dead lock. This
patch removes unnecessary nrs_lock to fix this problem.

Signed-off-by: Li Xi <lixi@ddn.com>
Change-Id: I6329e3e71da30a415dbb35b37d79ade118917c6a